--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <li> watching youtube </li>
 <a href="https://www.youtube.com/">youtube</a>
 <li> listening to music </li> 
-<a href="https://www.youtube.com/results?search_query=bts+playlist&spfreload=5"music playlist</a>
+<a href="https://www.youtube.com/channel/UC-9-kyTW8ZkZNDHQJ6FgpwQ" music</a>
 </ul>
 </body>
 </html>
